# Copyright 2026 Enactic, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[project]
name = "dora-openarm-classifier"
version = "0.1.0"
authors = [{ name = "Enactic, Inc." }]
description = "dora-rs node that classifies whether the current state completes the task successfully or not"
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "accelerate",
  "dora-rs>=0.5.0",
  "fastapi",
  "numpy",
  "pillow",
  "pyarrow",
  "python-multipart",
  "qwen-vl-utils",
  "httpx",
  "torch==2.8.*",
  "torchvision==0.23.*",
  "transformers",
  "uvicorn",
]

[dependency-groups]
dev = [
  "ruff == 0.14.11", # sync with .pre-commit-config.yaml
]

[project.scripts]
dora-openarm-classifier = "dora_openarm_classifier.main:main"
dora-openarm-classifier-server = "dora_openarm_classifier.server:main"

[project.urls]
Changelog = "https://github.com/enactic/dora-openarm-classifier/releases"
Issues = "https://github.com/enactic/dora-openarm-classifier/issues"
Repository = "https://github.com/enactic/dora-openarm-classifier"

[tool.ruff.lint]
extend-select = [
  "D",   # pydocstyle
  "UP"
]

[tool.ruff.lint.per-file-ignores]
"!src/**.py" = ["D"]
